@@ -358,133 +358,6 @@ sub phrase
 }
 
 
-
-######################################################################
-# STATIC METHODS
-######################################################################
-=pod
-
-=back
-
-=head2 Static Methods
-
-=over 4
-
-=cut
-######################################################################
-
-
-
-use EPrints;
-
-$EPrints::Plugin::REGISTRY = {};
-
-EPrints::Plugin::load();
-
-######################################################################
-=pod
-
-=item EPrints::Plugin::load() [static]
-
-Load all system plugins 
-
-=cut
-######################################################################
-
-sub load
-{
-	# no opts
-
-	my $dir = $EPrints::SystemSettings::conf->{base_path}."/perl_lib/EPrints/Plugin";
-
-	load_dir( $EPrints::Plugin::REGISTRY, $dir, "EPrints::Plugin" );
-}
-
-
-######################################################################
-=pod
-
-=item EPrints::Plugin::load_dir( $reg, $path, $baseclass, $prefix ) [static]
-
-Load plugins in this directory and recurse through subdirectories.
-
-$reg is a pointer to a hash to store the lost of found plugins in.
-
-=cut
-######################################################################
-
-sub load_dir
-{
-	my( $reg, $path, $class ) = @_;
-
-	my $dh;
-	opendir( $dh, $path ) || die "Could not open $path";
-	# This sorts the directory such that directories are last
-	my @filenames = sort { -d "$path/$a" <=> -d "$path/$b" } readdir( $dh );
-	foreach my $fn ( @filenames )
-	{
-		next if( $fn =~ m/^\./ );
-		next if( $fn eq "CVS" );
-		next if( $fn eq ".svn" );
-		my $filename = "$path/$fn";
-		if( -d $filename )
-		{
-			load_dir( $reg, $filename, $class."::".$fn );
-			next;
-		}
-		next unless( $fn =~ s/\.pm$// );
-		my $class = $class."::".$fn;
-		eval "use $class; 1";
-
-		if( $@ ne "" )
-		{
-			print STDERR "Problem loading $class:\n$@\n";
-			next;
-		}
-		no strict "refs";
-		my $disvar = $class.'::DISABLE';
-		my $disable = ${$disvar};
-		$disable = ${$disvar}; # supress "only once" warning
-		my $plugin = $class->new();
-		#my %defaults = $class->defaults();
-		use strict "refs";
-		next if( $disable );
-
-		my $pluginid = $plugin->{id};
-		if( !defined $pluginid )
-		{
-#			print STDERR "Warning: plugin $class has no ID set.\n";
-			next;
-		}
-		$reg->{$pluginid} = $class;
-	}
-	closedir( $dh );
-}
-
-
-
-
-######################################################################
-=pod
-
-=item @plugin_ids  = EPrints::Plugin::plugin_list() [static]
-
-Return either a list of all the ids of the system plugins.
-
-=cut
-######################################################################
-
-sub plugin_list
-{
-	my( $self ) = @_;
-
-	return keys %{$EPrints::Plugin::REGISTRY};
-}
-
-
-
-
-
 1;
 
 ######################################################################
