@@ -8128,4 +8128,5 @@ EPRINTS-3.1-beta-2
 2009-04-02 tdb
  * Refactored MetaField to speed up load time & not to allocate memory for
     undef
+ * Refactored Plugin registry to "PluginFactory" (same access via Session)
 
